--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portfolio</title>
     <link rel="stylesheet" href="styles/style.css">
+    <script src="https://kit.fontawesome.com/54ac5fda8f.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header class="header secondary-bg">        
@@ -21,8 +22,8 @@
                             <h4 class="banner-greetings dark-2">Hi, I  am</h4>
                             <h1 class="banner-title">Mary Hardy</h1>
                             <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-                            <button class="btn-primary">Download CV</button>
-                            <button class="btn-primary">Contact</button>
+                            <button class="btn-primary"><i class="fa-solid fa-download"></i>Download CV</button>
+                            <button class="btn-primary"><i class="fa-solid fa-phone"></i>Contact</button>
 
                         </div>
             <img class="banner-profile-pic" src="./images/hardy.png" alt="">
@@ -147,7 +148,7 @@ to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eg
                  
             </div>
             <div class="download-button">
-                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i>Download CV</button>
             </div>
         </section>
     </main>
